tests/flow/types-first-signature-construction/file1.js
// @flow

// The exported signature should be: (string) => string
function bar(x: string): string { return ""; }
declare function bar(x: number): number; // error: cannot declare

module.exports = bar;
